Visual redesign a test z Kriminologie I

--- a/docs/povinne-predmety/rimske-pravo/rimske-pravo-test.mdx
+++ b/docs/povinne-predmety/rimske-pravo/rimske-pravo-test.mdx
@@ -1,5 +1,6 @@
 ---
 title: Test z římského práva
+description: Vyzkoušejte si znalosti z Římského práva I. 
 sidebar_position: 1
 ---
 import { Quiz, QuizOption, QuizFilter } from '@site/src/components/Quiz';
