--- a/docs/povinne-volitelne-predmety/kriminologie-i/kriminologie-i-test.mdx
+++ b/docs/povinne-volitelne-predmety/kriminologie-i/kriminologie-i-test.mdx
@@ -1,5 +1,6 @@
 ---
 title: Test z Kriminologie I
+description: Vyzkoušejte si znalosti z Kriminologie I. 
 sidebar_position: 1
 ---
 import { Quiz, QuizOption, QuizFilter } from '@site/src/components/Quiz';
@@ -566,6 +567,202 @@ Test obsahuje otázky z bonusových testů na přednáškách a ukázkového tes
         </QuizOption>
 
         <QuizOption label={"dluhy, nedostatečná pracovní kvalifikace a nedostatečné pracovní návyky."} isCorrect={true}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Registrovanou kriminalitu vyjadřujeme: "} topic={kriminalitaData}>
+        <QuizOption label={"v absolutních číslech, což umožňuje čísla mezi sebou lépe porovnávat."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"většinou formou indexu."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"v přepočtu na 100 000 obyvatel."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"různými způsoby."} isCorrect={true}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Příkladem sociální prevence je: "} topic={prevence}>
+        <QuizOption label={"zvýšení minimální mzdy."} isCorrect={true}>
+        </QuizOption>
+
+        <QuizOption label={"instalace kamer."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"častější přítomnost policie v ohrožených lokalitách."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"umístění bezpečnostních fólií na okna."} isCorrect={false}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Základním zdrojem poznatků o kriminální kariéře jsou výzkumy, které sledují určitý vzorek populace po velmi dlouhou dobu. Označujeme je jako výzkumy: "} topic={kriminalitaData}>
+        <QuizOption label={"časosběrné."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"longitudinální."} isCorrect={true}>
+        </QuizOption>
+
+        <QuizOption label={"narativní."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"progresivní."} isCorrect={false}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Chicagská škola: "} topic={teorie}>
+        <QuizOption label={"odmítala filozofii pragmatismu."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"se zabývala vlivem fluktuace a anonymity."} isCorrect={true}>
+        </QuizOption>
+
+        <QuizOption label={"přehlížela formy sociální deozrganizace."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"zpochybnila koncentrický model velkoměsta."} isCorrect={false}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"V jakém případě způsob výběru soudců a státních zástupců působí jako rizikový faktor trestní politiky? Jsou-li vybíráni:  "} topic={trestniPolitika}>
+        <QuizOption label={"na základě expertních znalostí."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"demokratickou volbou."} isCorrect={true}>
+        </QuizOption>
+
+        <QuizOption label={"justiční samosprávou."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"na omezenou dobu."} isCorrect={false}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Mezi kriminologické výzkumy dokazující dědičnost kriminálního chování patří: "} topic={teorie}>
+        <QuizOption label={"studie na dvojčatech."} isCorrect={true}>
+        </QuizOption>
+
+        <QuizOption label={"etiketizační výzkumy."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"studie využívající výzkumnou techniku self-reportu."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"katamnestická sledování."} isCorrect={false}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Pro efektivní prevenci trestné činnosti je zásadní: "} topic={prevence}>
+        <QuizOption label={"identifikovat klíčovou úroveň prevence a na tu zaměřit 95 % zdrojů."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"předcházet trestné činnosti na různých úrovních."} isCorrect={true}>
+        </QuizOption>
+
+        <QuizOption label={"zaměřit se výlučně na kořeny problému."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"vynaložit velké množství prostředků."} isCorrect={false}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Za velmi vlivné jsou v oblasti desistence a jejího zkoumání považovány tzv. narativní teorie. Koho z následujících autorů můžeme považovat za jejich průkopníka?"} topic={teorie}>
+        <QuizOption label={"Shadd Maruna."} isCorrect={true}>
+        </QuizOption>
+
+        <QuizOption label={"Travis Hirschl."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Robert Sampson."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"John Laub."} isCorrect={false}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Povede zvýšení trestních sazeb k odrazení možných pachatelů?"} topic={trestniPolitika}>
+        <QuizOption label={"Ano, možní pachatelé silně reagují na hrozbu trestem."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Ano, ale jen v malé míře a v závislosti na informovanosti a přesvědčitelnosti pachatelů."} isCorrect={true}>
+        </QuizOption>
+
+        <QuizOption label={"Ne, pachatelé jsou přesvědčení, že nebudou chyceni a při páchání trestného činu nezvažují hrozící trest."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Ne, pro pachatele je zásadní okamžitý zisk z trestné činnosti a nezohledňují trest, který bude uložen až po nějaké době v budoucnosti."} isCorrect={false}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Která z následujících teorií desistence zdůrazňuje význam tzv. „bodů obratu“, jako je manželství, rodičovství nebo zaměstnání? "} topic={teorie}>
+        <QuizOption label={"Věkově odstupňované teorie neformální sociální kontroly."} isCorrect={true}>
+        </QuizOption>
+
+        <QuizOption label={"Teorie racionální volby."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Teorie odloženého odstrašení."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Teorie duálních systémů."} isCorrect={false}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Co nejlépe vystihuje postavení soft-law v oblasti vězeňství?"} topic={vezenstvi}>
+        <QuizOption label={"Vznikají soft-law dokumenty na různých úrovních, ale jedná se o jednorázové deklarativní dokumenty."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Vznikají soft-law dokumenty na různých úrovních, které jsou průběžně aktualizovány."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Vznikají průběžně aktualizované soft-law dokumenty, které hrají roli při kontrole vnitrostátními orgány."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Vznikají průběžně aktualizované soft-law dokumenty, které hrají roli při kontrole vnitrostátními orgány i mezinárodními orgány."} isCorrect={true}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Který z typů adaptace na sociální napětí podle Mertonovy teorie odpovídá páchání trestné činnosti?"} topic={teorie}>
+        <QuizOption label={"Inovace."} isCorrect={true}>
+        </QuizOption>
+
+        <QuizOption label={"Konformismus."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Ritualismus."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Odpadlictví."} isCorrect={false}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Zdrojem údajů o vězeňství není: "} topic={vezenstvi}>
+        <QuizOption label={"Space I."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Space II."} isCorrect={true}>
+        </QuizOption>
+
+        <QuizOption label={"Statistická ročenka vězeňské služby ČR."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"World Prison Brief."} isCorrect={false}>
+        </QuizOption>
+    </Quiz>
+
+    <Quiz question={"Co nejlépe charakterizuje tvorbu trestní politiky v České republice?"} topic={trestniPolitika}>
+        <QuizOption label={"Trestní politika je dlouhodobě a koncepčně připravovaná a koordinovaná státem."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Základní obrysy trestní politiky jsou koncepčně stanovené, ale koordinace a propracování není dostatečné."} isCorrect={true}>
+        </QuizOption>
+
+        <QuizOption label={"Trestní politika jako celek neexistuje a koncepce jsou připravované jen na úrovni jednotlivých institucí (VSČR, PMS ČR, SZ)."} isCorrect={false}>
+        </QuizOption>
+
+        <QuizOption label={"Trestní politika neexistuje a neexistují diskuze či plány na její vytvoření či rozvoj."} isCorrect={false}>
         </QuizOption>
     </Quiz>
 </QuizFilter>
