--- a/docs/studijni-opory/planovac-studia.mdx
+++ b/docs/studijni-opory/planovac-studia.mdx
@@ -1,6 +1,6 @@
 ---
 title: Plánovač studia
-description: Plánujte si studium na Právnické fakultě UK. Vybírejte předměty, sledujte kredity a exportujte si plán.
+description: Naplánujte si studium na celých pět let. 
 sidebar_position: 1
 ---
 
