--- a/docs/povinne-predmety/rimske-pravo/rimske-pravo-test.mdx
+++ b/docs/povinne-predmety/rimske-pravo/rimske-pravo-test.mdx
@@ -14,10 +14,7 @@ export const pramenyPrava = "Prameny římského práva"
 export const civilniProces = "Civilní proces"
 export const fyzickeOsoby = "Fyzické osoby"
 
-:::info Úvod 
-Test z římského práva je upravenou verzí známého _mega souboru_. Níže si můžete vybrat, která témata chcete procvičit. Každá odpověď k otázce obsahuje také vysvětlující citaci z KUSu, nebo Institucí. 
-
-Na zpracování všech otázek usilovně pracujeme. 🧑‍💻
+:::danger Pracujeme na tom 🧑‍💻
 :::
 
 <QuizFilter>
